--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,7 @@ h6 {
 #services {
   padding: 60px 0 40px 0;
   box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+  background-color: #c5c6f5;
 }
 
 #services .box {
