--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,10 @@ h6 {
   float: right;
 }
 
+#intro .intro-img img{
+  border-radius: 50%;
+}
+
 #intro .intro-info {
   width: 50%;
   float: left;
@@ -466,10 +470,11 @@ h6 {
 .section-header p {
   text-align: center;
   margin: auto;
-  font-size: 15px;
+  font-size: 17px;
   padding-bottom: 15px;
   color: #556877;
-  width: 50%;
+  width: 74%;
+  font-weight: bold;
 }
 
 /* Section with background
@@ -600,6 +605,7 @@ h6 {
   background: #fff;
   box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
   transition: all 0.3s ease-in-out;
+  background-color: #9272af;
 }
 
 #services .box:hover {
@@ -611,6 +617,10 @@ h6 {
   position: absolute;
   left: 1px;
   top: calc(50% - 32px);
+  
+}
+#services img {
+  border-radius: 100%;
 }
 
 #services .icon i {
@@ -620,7 +630,7 @@ h6 {
 }
 
 #services .title {
-  margin-left: 84px;
+  margin-left: 90px;
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
@@ -636,9 +646,10 @@ h6 {
 
 #services .description {
   font-size: 14px;
-  margin-left: 84px;
+  margin-left: 90px;
   line-height: 24px;
   margin-bottom: 0;
+  font-weight: bold;
 }
 
 #why-us {
