--- a/css/style.css
+++ b/css/style.css
@@ -1034,7 +1034,7 @@ h6 {
   margin: 0 0 20px 0;
   padding: 2px 0 2px 0;
   line-height: 1;
-  font-family:
+  font-family: monospace;
   color: #fff;
   font-weight: 400;
   letter-spacing: 3px;
