--- a/css/style.css
+++ b/css/style.css
@@ -1232,8 +1232,10 @@ h6 {
 
 
 @media (max-width: 574px) {
-  #intro {
-    padding: 100px 0 20px 0;
+  #blog .img-fluid {
+    max-width: 100%;
+    height: 120px;
+    margin-top: 39px;
   }
 }
 }
